# dask

./: .binstar.yml  .bugeject.toolbar-release  .codecov.yml  .coverage.yml  .coveragerc  .deepsource.toml  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  ADAPTIVE_CHUNKING_GUIDE.md  AGENTS.md  AUTHORS.md  Bug_fix-dask-engine.ipynb  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  Untitled.ipynb  Untitled1.ipynb  a.txt  appveyor.yml  ast_tests.ipynb  asv.conf.json  bug_test.py  chain-example.ipynb  changes.md  codecov.yml  conftest.py  dask.dataframe.to_sql example.ipynb  data.txt  demo.ipynb  demo_dask.py  dev-requirements.txt  (+21 more)
.claude/: settings.json
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  labeler.yml  release-drafter.yml  release.yml
.github/workflows/: activate.yml  additional.yml  array-api.yml  cancel.yml  ci-additional.yml  ci-docs.yaml  ci-pre-commit.yml  ci-upstream.yml  ci-windows.yaml  ci.yml  conda.yml  dask_test.yaml  demo_hashseed.yml  dependabot.yml  docs.yml  label-all.yml  label-prs.yml  labeler.yml  pre-commit.yml  publish-test-results.yaml  release-drafter.yml  release-publish.yml  spark.yml  stale-bot.yaml  test-report.yaml  test.yaml  tests.yml  update-gpuci.yml  upstream.yml  watch-conda-forge.yml  wheels.yml
.pixi/: config.toml
benchmarks/: array.py  csv.py
ci/: environment.yml  environment_released.yml
ci/recipe/: meta.yaml
conda-recipes/: README.md
conda-recipes/boto3/: meta.yaml
conda-recipes/botocore/: meta.yaml
conda-recipes/dask/: meta.yaml
conda-recipes/distributed/: meta.yaml
conda-recipes/jmespath/: meta.yaml
conda.recipe/: README.md  bld.bat  build.sh  meta.yaml  run_test.py
continuous_integration/: Dockerfile  README.md  build.cmd  environment-3.10.yaml  environment-3.11.yaml  environment-3.12-non-optional.yaml  environment-3.12.yaml  environment-3.13-non-optional.yaml  environment-3.13.yaml  environment-3.14.yaml  environment-3.14t.yaml  environment-3.6.yaml  environment-3.7.yaml  environment-3.8-dev.yaml  environment-3.8.yaml  environment-3.9.yaml  environment-latest.yaml  environment-mindeps-array-dataframe.yaml  environment-mindeps-array.yaml  environment-mindeps-bag-delayed.yaml  environment-mindeps-dataframe.yaml  environment-mindeps-distributed.yaml  environment-mindeps-non-optional.yaml  environment-mindeps-optional.yaml  environment-mindeps-test1.yaml  environment-mindeps-test2.yaml  environment-mindeps-test3.yaml  environment-mindeps-test4.yaml  environment-mindeps-test5.yaml  environment-mindeps-test6.yaml  environment-mindeps.yaml  environment-np117.yaml  environment-np118.yaml  environment-np119.yaml  environment-np120.yaml  environment-spark.yml  environment-windows.yaml  environment-windows.yml  environment.yml  run-hdfs.sh  (+3 more)
continuous_integration/appveyor/: build.cmd  environment.yaml  (+3 more)
dask/: __init__.py  __main__.py  _compatibility.py  _config.py  _expr.py  _pandas_compat.py  _rich_table.py  _task_spec.py  _version.py  annotation.py  annotations.py  array.py  async.py  azure_functions_client.py  backends.py  base.py  blockwise.py  cache.py  callbacks.py  chain.py  cli.py  cogroups.py  compatibility.py  compose.py  config.py  conftest.py  context.py  core.py  core_cy.pyx  dask-schema.yaml  dask.yaml  datasets.py  delayed.py  distributed.py  dot.py  expr.py  expressions.py  graph_manipulation.py  hashing.py  hdfs_utils.py  (+32 more)
dask_expr/: __init__.py  _accessor.py  _align.py  _backends.py  _categorical.py  _collection.py  _concat.py  _core.py  _cumulative.py  _datetime.py  _describe.py  _dummies.py  _expr.py  _groupby.py  _indexing.py  _interchange.py  _merge.py  _merge_asof.py  _quantile.py  _quantiles.py  _reductions.py  _repartition.py  _resample.py  _rolling.py  _shuffle.py  _str_accessor.py  _util.py  _version.py  align.py  collection.py  concat.py  datasets.py  expr.py  groupby.py  merge.py  quantiles.py  reductions.py  repartition.py  shuffle.py
dask_match/: __init__.py  collection.py  core.py  datasets.py  expr.py  optimize.py  reductions.py  repartition.py  shuffle.py
debian/: changelog  control  copyright  rules
designs/: array-expr-file-organization.md  array-expr-fusion.md  array-expr-pushdown.md  array-expr.md
distributed/: __init__.py  _concurrent_futures_thread.py  _ipython_utils.py  _version.py  actor.py  asyncio.py  batched.py  bokeh.py  center.py  cfexecutor.py  channels.py  client.py  cluster.py  collections.py  compatibility.py  config.py  config.yaml  core.py  counter.py  dask.py  diagnostics.py  diskutils.py  distributed-schema.yaml  distributed.yaml  event.py  executor.py  hdfs.py  http_worker.py  joblib.py  lock.py  locket.py  metrics.py  nanny.py  node.py  pool.py  preloading.py  process.py  proctitle.py  profile.py  protocol.py  (+28 more)
distributed3/: __init__.py  center.py  client.py  core.py  dask.py  pool.py  scheduler.py  utils.py  worker.py
docs/: Makefile  README.rst  make.bat  release-procedure.md  requirements-docs.txt  requirements-pip-pin.txt  requirements.txt
examples/: hash_pandas_object_demo.py  hash_pandas_object_vulnerability_report.md  hash_pandas_object_vulnerability_report_en.md
me/: script.py  test-characteristics.ipynb
notebooks/: Using dask and anaconda-cluster to analyze data on an EC2 cluster.ipynb  dask-quickstart.ipynb  dask_numba_parallel_processing.ipynb  dask_reblock_example.ipynb  hubble-demo.ipynb  parallel_image_filtering_using_numba.ipynb  parallelize_image_filtering_workload.ipynb  simple-numpy-sum.ipynb
pbag/: __init__.py  core.py  notes.md  serialize.py
pframe/: __init__.py  categories.py  cframe.py  convert.py  core.py  utils.py
plans/: array-expr-migration.md  array-expr-pushdown.md
reports/: diagnosis_pickle_dask_array_v2.23.0.md  verification_pickle_dask_array_v2.23.0.md
scripts/: repro_pickle_dask_array.py
stubs/: tlz.pyi
tests/: test_base.py  test_config.py  test_delayed.py  test_distributed.py  test_docs.py  test_graph_manipulation.py  test_layers.py
(+1509 files in other folders)
