[flake8]
# References:
# https://flake8.readthedocs.io/en/latest/user/configuration.html
# https://flake8.readthedocs.io/en/latest/user/error-codes.html
# https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
exclude = __init__.py,versioneer.py
ignore =
    E20,   # Extra space in brackets
    E231,E241,  # Multiple spaces around ","
    E26,   # Comments
    E4,    # Import formatting
    E721,  # Comparing types instead of isinstance
    E731,  # Assigning lambda expression
    E741,  # Ambiguous variable names
    W503,  # line break before binary operator
    W504,  # line break after binary operator
    F811,  # redefinition of unused 'loop' from line 10
max-line-length = 120

[isort]
sections = FUTURE,STDLIB,THIRDPARTY,DISTRIBUTED,FIRSTPARTY,LOCALFOLDER
profile = black
skip_gitignore = true
force_to_top = true
default_section = THIRDPARTY
known_first_party = dask
known_distributed = distributed

[versioneer]
VCS = git
style = pep440
versionfile_source = dask/_version.py
versionfile_build = dask/_version.py
tag_prefix =
parentdir_prefix = dask-

[aliases]
test = pytest

[options.package_data]
dask =
    py.typed

[tool:pytest]
markers:
  network: Test requires an internet connection
  slow: Skipped unless --runslow passed
  gpu: marks tests we want to run on GPUs
  flaky: they are not relieable
addopts = -v -rsxfE --durations=10 --color=yes
filterwarnings =
    # From Cython-1753
    ignore:can''t resolve:ImportWarning
    error:::dask[.*]
    error:::pandas[.*]
    error:::numpy[.*]
    error:::distributed[.*]
    # From https://github.com/numpy/numpy/issues/20225
    ignore:The distutils\.sysconfig module is deprecated, use sysconfig instead:DeprecationWarning:numpy
xfail_strict = true

[metadata]
license_files = LICENSE.txt

[mypy]
# Silence errors about Python 3.9-style delayed type annotations on Python 3.8
python_version = 3.9
ignore_missing_imports = true
plugins = numpy.typing.mypy_plugin
