[metadata]
name = dask
description = Parallel PyData with Task Scheduling
url = https://github.com/dask/dask/
maintainer = Matthew Rocklin
maintainer_email = mrocklin@gmail.com
license = BSD
keywords = task-scheduling parallel numpy pandas pydata
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: System :: Distributed Computing
long_description = file: README.rst
license_files =
    LICENSE.txt
    dask/array/NUMPY_LICENSE.txt

[options]
packages = find:
python_requires = >=3.8
# NOTE: These are tested in `continuous_integration/test_imports.sh` If
# you modify these, make sure to change the corresponding line there.
install_requires =
    click >= 7.0
    cloudpickle >= 1.1.1
    fsspec >= 0.6.0
    packaging >= 20.0
    partd >= 1.2.0
    pyyaml >= 5.3.1
    toolz >= 0.8.2
    importlib_metadata >= 4.13.0
include_package_data = True
zip_safe = False

[options.extras_require]
array = numpy >= 1.21
# keeping for backwards compatibility
bag =
dataframe =
    numpy >= 1.21
    pandas >= 1.3
distributed = distributed == 2023.3.1
diagnostics =
    bokeh >= 2.4.2, <3
    jinja2 >= 2.10.3
# keeping for backwards compatibility
delayed =
complete =
    dask[dataframe,distributed,diagnostics]
    pyarrow >= 7.0
    lz4 >= 4.3.2
test =
    pandas[test]
    pytest
    pytest-rerunfailures
    pytest-xdist
    pre-commit

[flake8]
# References:
# https://flake8.readthedocs.io/en/latest/user/configuration.html
# https://flake8.readthedocs.io/en/latest/user/error-codes.html
# https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
exclude = __init__.py
ignore =
    # Extra space in brackets
    E20
    # Multiple spaces around ","
    E231,E241
    # Comments
    E26
    # Import formatting
    E4
    # Comparing types instead of isinstance
    E721
    # Assigning lambda expression
    E731
    # Ambiguous variable names
    E741
    # Line break before binary operator
    W503
    # Line break after binary operator
    W504
    # Redefinition of unused 'loop' from line 10
    F811
    # No explicit stacklevel in warnings.warn. FIXME we should correct this in the code
    B028

max-line-length = 120
per-file-ignores =
    *_test.py:
        # Do not call assert False since python -O removes these calls
        B011,
    **/tests/*:
        # Do not call assert False since python -O removes these calls
        B011,

[isort]
sections = FUTURE,STDLIB,THIRDPARTY,DISTRIBUTED,FIRSTPARTY,LOCALFOLDER
profile = black
skip_gitignore = true
force_to_top = true
default_section = THIRDPARTY
known_first_party = dask
known_distributed = distributed

[versioneer]
VCS = git
style = pep440
versionfile_source = dask/_version.py
versionfile_build = dask/_version.py
tag_prefix =
parentdir_prefix = dask-

[aliases]
test = pytest

[options.entry_points]
console_scripts =
    dask = dask.__main__:main
dask.array.backends =
    cupy = dask.array.cupy_entry_point:CupyBackendEntrypoint

[options.package_data]
dask =
    py.typed

[tool:pytest]
markers:
  network: Test requires an internet connection
  slow: Skipped unless --runslow passed
  gpu: marks tests we want to run on GPUs
  skip_with_pyarrow_strings: Tests that should be skipped when pyarrow string conversion is turned on
  xfail_with_pyarrow_strings: Tests that should be xfailed when pyarrow string conversion is turned on
addopts = -v -rsxfE --durations=10 --color=yes
filterwarnings =
    # From Cython-1753
    ignore:can't resolve:ImportWarning
    error:::dask[.*]
    error:::pandas[.*]
    error:::numpy[.*]
    error:::distributed[.*]
    # From https://github.com/numpy/numpy/issues/20225
    ignore:The distutils\.sysconfig module is deprecated, use sysconfig instead:DeprecationWarning:numpy
    # With no network access, distributed raises a warning when detecting local IP address
    ignore:Couldn't detect a suitable IP address:RuntimeWarning:distributed
    # Ignore FutureWarning for change in group_keys behavior: no changes required on the dask side.
    # https://pandas.pydata.org/docs/dev/whatsnew/v1.5.0.html#using-group-keys-with-transformers-in-groupby-apply
    ignore:Not prepending group keys:FutureWarning
    ignore:.*:dask.tests.warning_aliases.RemovedIn20Warning
xfail_strict=true

[mypy]
# Silence errors about Python 3.9-style delayed type annotations on Python 3.8
python_version = 3.9
# See https://github.com/python/mypy/issues/12286 for automatic multi-platform support
platform = linux
# platform = win32
# platform = darwin
plugins = numpy.typing.mypy_plugin
allow_untyped_decorators = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[codespell]
ignore-words-list = coo,nd
skip = docs/source/changelog.rst
